listening log updated

--- a/website/home.html
+++ b/website/home.html
@@ -134,6 +134,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="updates" class="box">
 			<h2>updates</h2>
+			<li>05.may.24: new listening log: <a href="music/listening-log/2024/spring.html#4">3rd desire [reve]</a></li>
 			<li>21.apr.24: new notebook page: <a href="/notebook/sitely/info.html">site + tools info</a></li>
 			<li>20.apr.24 - journal log: <a href="/journal/2024/04.html#20">my dilemma with neocities profile</a></li>
 			<li>14.apr.24 - added more games to <a href="/vgs">gaming log</a>!</li>
