added a link to fo1

--- a/website/vgs/fallout-1/index.html
+++ b/website/vgs/fallout-1/index.html
@@ -46,7 +46,8 @@
 		<li><a href="https://cdn.akamai.steamstatic.com/steam/apps/38400/manuals/Fallout_manual_English.pdf?t=1572025441" target="_blank">official fallout manual</a></li>
 		<li><a href="https://lemmings19.github.io/fallout-1-walkthrough/" target="_blank">the ultimate fallout guide</a></li>
 		<li><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=631275749" target="_blank">mastering fallout 1 guide</a></li>
-		<li><a href="https://www.nma-fallout.com/resources/falche-fallout-1-editor.15/" target="_blank">fallout character editor</a></li>
+		<li><a title="let's you tweak character stats!!!" href="https://www.nma-fallout.com/resources/falche-fallout-1-editor.15/" target="_blank">fallout character editor</a></li>
+		<li><a href="https://github.com/rotators/Fo1in2" target="_blank">fallout 1 in 2</a></li>
 		<details>
 			<summary>hotkeys from official manual <small>i forget</small></summary><img src="manual-keys.PNG" width="100%">
 		</details>
