site wall updated

--- a/website/sites/index.html
+++ b/website/sites/index.html
@@ -52,12 +52,10 @@
 			<a title="hoonis - the most colorful website ever!! whimsical even" href="https://confettiguts.neocities.org" target="_blank"><img src="!g/confettiguts.gif"></a>
 			<a title="spencer - lots of cool collections + i love looking at pics of harvey aka his cat + THEJERM" href="https://foggybear42.neocities.org" target="_blank"><img src="!g/foggybear.gif"></a>
 			<a title="pirra - LOVE the sticker sheet collection!!! and it inspired mine as well" href="https://pirra.neocities.org" target="_blank"><img src="!g/pirra.gif"></a>
-			<a title="r0b1n666 - cool art!" href="https://r0b1n666.neocities.org" target="_blank"><img src="!g/r0b1n666.gif"></a>
 			<a title="bomsoup - fellow kpopper, i also get very cool film recs from this site!" href="https://bomsoup.neocities.org" target="_blank"><img src="!g/bomsoup.gif"></a>
 			<a title="crow - really like their music reviews! it is always interesting to read on their perspective of things." href="https://crows-nest.neocities.org" target="_blank"><img src="!g/crows-nest.gif"></a>
 			<a title="juliette - CUTEEEE site!!! i love being here" href="https://juriettoo.neocities.org" target="_blank"><img src="!g/juriettoo.png"></a>
 			<a title="rio - awesome website with a responsive (and incredible!) layout. also has a ton of links to resources, books, etc!" href="https://nenrikido.neocities.org" target="_blank"><img src="!g/nenrikido.gif"></a>
-			<a title="finn - i love their /cats page the most!" href="https://snowenti.neocities.org" target="_blank"><img src="!g/snowenti.gif"></a>
 			<a title="zed - cool site with lots to see!" href="https://ohrade.neocities.org" target="_blank"><img src="!g/ohrade.gif"></a>
 			<a title="charc - LOVE the colors of this site!!! very cute" href="https://charc.neocities.org" target="_blank"><img src="!g/charc.gif"></a>
 			<a title="mamo - ONE OF MY FAV SITES!!! they have a ton of pages dedicated to the media they consume and i just love how they all look!!! lots of stuff to check out here! their lyrics pages is a must see" href="https://kakashi.neocities.org" target="_blank"><img src="!g/kakashi.gif"></a>
@@ -174,7 +172,6 @@
 			<a title="ames" href="https://tthumbelina.neocities.org/" target="_blank"> <img src="!g/tthumbelina.GIF"></a>
 			<a href="https://hidingspot.neocities.org" target="_blank"><img src="https://hidingspot.neocities.org/imgs/hidingspot-sitebutton.gif" alt="hidingspot's site button"></a>
 			<a title="ita.toys - such a FUN site. this is what having graphic design as your passion truly looks like" href="https://ita.toys" target="_blank"><img src="!g/ita.toys.gif" alt="ita.toys"></a>
-			<a title="fruitgummie" href="https://fruitgummie.neocities.org/" target="_blank"><img src="!g/fruitgummie.gif" alt="fruitgummie"></a>
 			<a title="shydeer" href="https://shydeer.neocities.org" target="_blank"><img src="!g/shydeer.png" alt="shydeer"></a>
 			<a title="pameluft - just a just log of sorts. love the concept behind this site!" href="https://pameluft.neocities.org" target="_blank"><img src="!g/pameluft.gif" alt="pameluft"></a>
 			<a target="_blank" href="https://kwaamfan.neocities.org/"><img src="https://files.catbox.moe/egpfu7.gif"></a>
@@ -246,7 +243,7 @@
 			<a title="i can read this site for hours and hours. so many interesting bits in here" href="https://incessantpain.neocities.org/" target="_blank"><img src="!g/incessantpain.gif"></a>
 			<a title="very cute personal site. seals :3" href="https://sealparty.neocities.org" target="_blank"><img src="!g/sealparty.gif"></a>
 			<a href="https://rachychel.neocities.org/" target="_blank"><img src="!g/rachychel.gif"></a>
-			<a href="https://22yk01.neocities.org" target="_blank"><img src="https://files.catbox.moe/xg8kbn.png" alt="22yk01"></a>
+			<a href="https://22yk01.neocities.org" target="_blank"><img src="!g/22yk01.gif" alt="22yk01"></a>
 			<a href="https://middlepot.com" target="_blank"><img src="https://middlepot.com/button.png"></a>
 			<a href="https://yuviko.neocities.org" target="_blank"><img src="!g/yuviko.gif"></a>
 			<a href="https://thehoneypot.neocities.org/" target="_blank"><img src="!g/thehoneypot.png"></a>
@@ -268,6 +265,10 @@
 			<a href="https://nerucom.neocities.org" target="_blank"><img src="!g/nerucom.gif" alt="nerucom"></a>
 			<a title="virtuagirl" href="https://www.virtuagirl.net/" target="_blank"><img src="!g/virtuagirl.gif" alt="virtuagirl"></a>
 			<a href="https://maria.town" target="_blank"><img src="!g/maria.town.png" alt="maria.town"></a>
+			<a href="https://avas.space/" target="_blank"><img src="https://ava.nekoweb.org/buttons/buttongif.gif"></a>
+			<a title="fruitgummie" href="https://fruitgummie.neocities.org/" target="_blank"><img src="!g/fruitgummie.gif" alt="fruitgummie"></a>
+			<a href="https://ocha.cafe" target="_blank"><img src="!g/ocha.cafe.png" alt="ocha.cafe"></a>
+			<a title="so colorful and wonderful" href="https://syntheticfruits,neocities.org" target="_blank"><img src="!g/syntheticfruits.gif" alt="syntheticfruits"></a>
 		</div>
 
 		<a href="https://mewmiu.blog.fc2.com" target="_blank"><img src="https://blog-imgs-169.fc2.com/m/e/w/mewmiu/stamp.png"></a>
@@ -286,24 +287,12 @@
 			<a href="http://berry.heartette.net/" target="_blank"><img src="!g/berry.heartette.gif"></a>
 			<a title="lily - cute site of an artists i follow!" href="https://mothcub.neocities.org" target="_blank"><img src="!g/mothcub.gif"></a>
 			<a href="https://14-4ml.neocities.org/" target="_blank"><img src="!g/14-4ml.gif" alt="14-4ml"></a>
-			<a href="https://avas.space/" target="_blank"><img src="https://ava.nekoweb.org/buttons/buttongif.gif"></a>
 		</div>
 
 		<div class="banner">
 			<a title="meisa - japanese artists that has worked with one of my fav vocaloid producers: siinamota!" href="http://hathune39.web.fc2.com/" target="_blank"><img src="!g/hathune.gif"></a>
 			<a title="Tokucina / 彩音ちな - gorgeous oil pastel art! one of my many art inspirations" href="http://tokeisou.client.jp/" target="_blank"><img src="!g/tokeisou.client.jp.jpg"></a>
 			<a title="futureisfailed / erbatur - electronic artist i like!" href="http://erbatur.web.fc2.com/" target="_blank"><img src="!g/erbatur.gif" alt="erbatur"></a>
-		</div>
-
-		<h4 id="social">social</h4>
-		<div id="forums" class="neo">
-			<a title="cinni's social site!" href="https://angel-town.cinni.net" target="_blank"><img src="!g/angel-town.gif"></a>
-			<a title="drawing site by cinni.net" href="https://oekaki.cinni.net" target="_blank"><img src="!g/cinnisoekaki.gif"></a>
-			<a title="status cafe - microblog site" href="https://status.cafe" target="_blank"><img src="https://status.cafe/assets/button.png" alt="Status Cafe" /></a>
-			<a title="melonland.net forum" href="https://forum.melonland.net" target="_blank"><img src="!g/MELONLAND-FORUM.gif"></a>
-			<a title="32.bit cafe" href="https://www.32bit.cafe/" target="_blank"><img src="!g/32bit-cafe.png" alt="32.bit cafe"></a>
-			<a href="https://nekoweb.org/" target="_blank"><img src="https://nekoweb.org/assets/buttons/button4.gif" alt="nekoweb"></a>
-			<a title="silly.city webring" href="https://silly.city" target="_blank"><img src="!g/silly.city.gif" alt="silly city"></a>
 		</div>
 
 		<h4 id="resources">resources / graphics</h4>
@@ -344,6 +333,7 @@
 		</div>
 		<a title="archived site - cute pixel sets" href="https://web.archive.org/web/20021030170809/http://graphicgard.topcities.com/Hydrangea.html"><img src="/sites/!g/hydrangea-topcities.gif" width="90px"></a>
 		<a title="portuguese blog i found with tons but TONS of gifs, pixels, bgs, etc" href="https://cantinhoencantado.blogs.sapo.pt" target="_blank"><img src="!g/cantinhoencantado.gif" width="90px"></a>
+		<a href="https://" target="_blank"><img src="!g/pomelo-pixel.gif" alt="pomelo's pixel site"></a>
 
 		<h4 id="fun">for fun!</h4>
 		<div class="neo">
@@ -356,6 +346,17 @@
 
 		<div class="banner">
 			<a title="pucci's world - a site dedicated to the webmaster's cats! so cute" href="https://puccisworld.neocities.org/" target="_blank"><img src="!g/pucci.gif"></a>
+		</div>
+
+		<h4 id="social">social</h4>
+		<div id="forums" class="neo">
+			<a title="cinni's social site!" href="https://angel-town.cinni.net" target="_blank"><img src="!g/angel-town.gif"></a>
+			<a title="drawing site by cinni.net" href="https://oekaki.cinni.net" target="_blank"><img src="!g/cinnisoekaki.gif"></a>
+			<a title="status cafe - microblog site" href="https://status.cafe" target="_blank"><img src="https://status.cafe/assets/button.png" alt="Status Cafe" /></a>
+			<a title="melonland.net forum" href="https://forum.melonland.net" target="_blank"><img src="!g/MELONLAND-FORUM.gif"></a>
+			<a title="32.bit cafe" href="https://www.32bit.cafe/" target="_blank"><img src="!g/32bit-cafe.png" alt="32.bit cafe"></a>
+			<a href="https://nekoweb.org/" target="_blank"><img src="https://nekoweb.org/assets/buttons/button4.gif" alt="nekoweb"></a>
+			<a title="silly.city webring" href="https://silly.city" target="_blank"><img src="!g/silly.city.gif" alt="silly city"></a>
 		</div>
 
 		<h3><img src="/!g/pix/icon_k_gyo.gif"> 404 graveyard :(</h3>
@@ -379,6 +380,8 @@
 			<a title="surge - found on 32bit cafe discord server! very cool and i love the photography page" href="http://doubleincision.com/" target="_blank"><img src="!g/doubleincision.png"></a>
 			<a title="kojou - i love all the art around this site!" href="https://kojou.neocities.org" target="_blank"><img src="!g/kojou.jpg"></a>
 			<a title="ava - very fun layout!" href="https://daintyeco.neocities.org" target="_blank"><img src="!g/daintyeco.gif"></a>
+			<a title="finn - i love their /cats page the most!" href="https://snowenti.neocities.org" target="_blank"><img src="!g/snowenti.gif"></a>
+			<a title="r0b1n666 - cool art!" href="https://r0b1n666.neocities.org" target="_blank"><img src="!g/r0b1n666.gif"></a>
 		</div>
 
 		<!--box1 end wrapper end div-->
