notebook pages updated

--- a/website/notebook/links/index.html
+++ b/website/notebook/links/index.html
@@ -61,6 +61,7 @@
 		<li><a href="https://coolors.co" target="_blank">coolors</a> - lets you make color palettes from scratch or from a pic. you can also save their URL or PNG</li>
 		<li><a href="https://www.remove.bg" target="_blank">remove.bg</a> - aka make imgs transparent!</li>
 		<li><a href="https://doodad.dev/dither-me-this/" target="_blank">dither me this</a> - dither imgs! i use this A LOT. mostly for backgrounds</li>
+		<li><a href="https://www.w3schools.com/colors/colors_picker.asp" target="_blank">w3schools' color picker</a> - shows you the different hues, contrast, and how the color looks as a background with text!</li>
 
 		<center><img src="/!g/div/scissors.gif"></center>
 
