--- a/website/notebook/sitely/graphics.html
+++ b/website/notebook/sitely/graphics.html
@@ -299,6 +299,7 @@
 		<img src="/!g/pix/phone.gif">
 		<img src="/!g/pix/mailwings.gif">
 		<img src="/!g/pix/dvd1.gif">
+		<a href="https://sorahana.ciao.jp/" target="_blank"><img src="/!g/pix/hw10.gif"></a>
 
 		<h3 id="tiny">tinnier</h3>
 
@@ -310,6 +311,7 @@
 		<img src="/!g/pix/caution1.gif">
 		<a href="http://sozaiya405.chu.jp/" target="_blank"><img src="/!g/pix/flashing-star-sozaiya.gif"></a>
 		<a href="http://sozaiya405.chu.jp/" target="_blank"><img src="/!g/pix/mail-sozaiya.gif"></a>
+		<a href="https://pomelo.lol" target="_blank"><img src="/!g/pix/pomelo-smile.png"></a>
 
 
 
@@ -843,8 +845,10 @@
 		<h2 id="gif">gifs</h2>
 		<a title="bouncy bubbles" href="https://archive.cinni.net/sites/bouncy-bubbles/" target="_blank"><img src="/!g/gif/hellokittystar.gif"></a>
 		<img src="/!g/gif/sad-seal.gif">
+		<img src="/!g/gif/seal-lookingaround.gif">
 		<img src="/!g/gif/moobloom-bee.gif">
 		<img src="/!g/gif/jermahell.gif">
+		<img src="/!g/gif/jerma-mexico.gif">
 		<img src="/!g/gif/jermachristmas.gif">
 		<img src="/!g/gif/darksoulsskel.gif">
 		<img src="/!g/gif/kaiba.gif">
