added more cats to collection

--- a/website/collection/cats/index.html
+++ b/website/collection/cats/index.html
@@ -24,6 +24,8 @@
 
 		<!--column 1-->
 		<div class="column">
+			<img src="!g/binkly.jpg">
+			<img src="!g/2cats.jpg" alt="2 cats hugging">
 			<img src="!g/grindneverstarts.jpg" alt="the grind never starts i'm sleeping">
 			<img src="!g/stupid-tiger.jpg" alt="stupid tiger">
 			<img src="!g/baby-cat.jpeg" alt="cat with a bib">
@@ -49,6 +51,9 @@
 
 		<!--column 2-->
 		<div class="column">
+			<img src="!g/cell.jpg">
+			<img src="!g/fart.jpg">
+			<img src="/!g/gif/gato-splash.gif" alt="a cat getting water splashed on him">
 			<img src="!g/mau.jpg" alt="the tower of babel if it was awesome">
 			<img src="!g/buenosdias.jpeg" alt="buenos dias">
 			<img src="!g/cat-angel.gif">
@@ -73,6 +78,10 @@
 
 		<!--column 3-->
 		<div class="column">
+			<img src="!g/tiger.jpg">
+			<img src="!g/apple-car.jpg">
+			<img src="!g/smirk.jpg">
+			<img src="!g/soggy-cat.jpg">
 			<img src="!g/blub-meow.jpg" alt="fish cat">
 			<img src="!g/thisgoofyassguy.jpg">
 			<img src="!g/wait-im-jolly.jpeg">
@@ -104,7 +113,7 @@
 	<footer>
 		<img src="div1.gif" alt=""><img src="div.gif" alt=""><img src="div2.gif" alt="">
 		<br>
-		<b>last updated: 23.mar.24</b>
+		<b>last updated: 09.may.24</b>
 		<br>
 		<b>credit:</b> page made with materials by <a href="http://tora7.ciao.jp" target="_blank">tora7.ciao.jp</a> / <a href="/notebook/links/fonts.html">fonts</a> used: cat paw
 
