--- a/website/home.html
+++ b/website/home.html
@@ -128,31 +128,22 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<p><span class="hl">watching:</span> dungeon meshi, dead end: paranormal park, twin peaks S2</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
 			<p><span class="hl">working on:</span> <a href="/projects/learning-js/index.html">learning JS</a>, uni work</p>
-			<p><span class="hl">coding/writing:</span> journal and planners blog post</p>
+			<p><span class="hl">coding/writing:</span>microblog, journal and planners blog post, plushies</p>
 			<p class="date">last updated on 17.apr.24</p>
 		</div>
 
 		<div id="updates" class="box">
 			<h2>updates</h2>
+			<li>09.may.24: added may page to <a href="/scrapbook/2024#may">scrapbook</a> + more <a href="collection/cats/index.html">cats</a></li>
 			<li>04.may.24: new journal log: <a href="/journal">end of 1st uni semester</a></li>
 			<li>02.may.24: new listening log: <a href="music/listening-log/2024/spring.html#4">3rd desire [reve]</a></li>
 			<li>21.apr.24: new notebook page: <a href="/notebook/sitely/info.html">site + tools info</a></li>
-			<li>20.apr.24 - journal log: <a href="/journal/2024/04.html#20">my dilemma with neocities profile</a></li>
-			<li>14.apr.24 - added more games to <a href="/vgs">gaming log</a>!</li>
-			<li>12.apr.24 - added some new pages to <a title="fallout, fallout new vegas, cloud gardens" href="/vgs">gaming log</a>!</li>
-			<li>11.apr.24 - my site is 1 year old today ^_^ i wrote about it on my <a href="/journal">journal</a></li>
-			<li>10.apr.24 - <a href="/music/listening-log/2024/spring.html#3">listening log</a>: 陽​の​か​け​ら</li>
-			<li>09.apr.24 - new <a href="/journal">journal </a>log: gender</li>
-			<li>07.apr.24 - updated featured section in <a href="/music">music</a></li>
-			<li>03.apr.24 - new pic on <a href="photobook/index.html">photobook</a> + last update to march <a href="scrapbook/2024/index.html#mar">scrapbook</a> + created a <a href="/projects/learning-js/practice.html">practice page</a> for JS + new <a title="drippin's beautiful maze" href="/music/listening-log/2024/spring.html#2">listening log</a></li>
-			<li>29.mar.24 - site is now part of the <a href="https://silly.city" target="_blank" class="outlink">silly.city</a> webring!</li>
-			<li>25.mar.24 - new <a title="custom domain" href="/journal">journal</a> log!</li>
-			<li>24.mar.24 - added <a title="previously hosted on github pages" href="/projects">web projects</a> + created <a href="/music/listening-log/2024/spring.html">spring listening log</a></li>
+			<li><a href="notebook/archive/updates.html">past updates</a></li>
 		</div>
 
 		<div id="featured-cat" class="box">
 			<h2>featured cat</h2>
-			<a title="click me to see more freaks" href="/collection/cats" target="_blank"><img src="/collection/cats/!g/blub-meow.jpg" width="90%" alt="featured cat, its a fish with a cat's face photoshopped into it"></a>
+			<a title="click me to see more freaks" href="/collection/cats" target="_blank"><img src="/collection/cats/!g/soggy-cat.jpg" width="90%" alt="featured cat, a cat saying i'm soggy bro"></a>
 		</div>
 
 		<div id="listing" class="box">
