--- a/website/sites/index.html
+++ b/website/sites/index.html
@@ -183,7 +183,7 @@
 			<a href="https://snewberry.neocities.org"><img style="image-rendering: pixelated" src="https://snewberry.neocities.org/snewbutton.gif" alt="Snewberry Button"></a>
 			<a title="lexi" href="https://lexiqqq.com/" target="_blank"><img src="https://www.lexiqqq.com/assets/img/button_4.gif" alt="lexi"></a>
 			<a title="sweetlolita" href="https://sweetlolita.neocities.org" target="_blank"><img src="!g/sweetlolita.gif" alt="sweetlolita"></a>
-
+			<a href="https://ocha.cafe" target="_blank"><img src="!g/ocha.cafe.png" alt="ocha.cafe"></a>
 		</div>
 
 		<h4>sites without buttons (<a href="mailto:doqmeat@gmail.com" target="_blank">e-mail me</a> if you do have one!)</h4>
@@ -267,8 +267,8 @@
 			<a href="https://maria.town" target="_blank"><img src="!g/maria.town.png" alt="maria.town"></a>
 			<a href="https://avas.space/" target="_blank"><img src="https://ava.nekoweb.org/buttons/buttongif.gif"></a>
 			<a title="fruitgummie" href="https://fruitgummie.neocities.org/" target="_blank"><img src="!g/fruitgummie.gif" alt="fruitgummie"></a>
-			<a href="https://ocha.cafe" target="_blank"><img src="!g/ocha.cafe.png" alt="ocha.cafe"></a>
 			<a title="so colorful and wonderful" href="https://syntheticfruits,neocities.org" target="_blank"><img src="!g/syntheticfruits.gif" alt="syntheticfruits"></a>
+			<a title="vexcharm" href="https://vexcharm.net" target="_blank"><img src="!g/vexcharm.net.gif" alt="vexcharm"></a>
 		</div>
 
 		<a href="https://mewmiu.blog.fc2.com" target="_blank"><img src="https://blog-imgs-169.fc2.com/m/e/w/mewmiu/stamp.png"></a>
@@ -330,10 +330,10 @@
 			<a title="has cute CAT themed FC2 blog templates, materials, and lots more! they also have linked other resource sites!" href="http://tora7.ciao.jp/" target="_blank"><img src="!g/tora7.gif" alt="tora7"></a>
 			<a title="joisu - their pixels are toybox are so cute :3" href="https://twicethepixels.neocities.org/" target="_blank"><img src="https://twicethepixels.neocities.org/site_images/TwiceThePixels-AniBanner-88x31-Hamtaro.gif" alt="twicethepixels"></a>
 			<a title="catstuff" href="https://user.xmission.com/~emailbox/catstuff.htm" target="_blank"><img src="!g/catstuff-xmission.gif"></a>
+			<a href="https://" target="_blank"><img src="!g/pomelo-pixel.gif" alt="pomelo's pixel site"></a>
 		</div>
 		<a title="archived site - cute pixel sets" href="https://web.archive.org/web/20021030170809/http://graphicgard.topcities.com/Hydrangea.html"><img src="/sites/!g/hydrangea-topcities.gif" width="90px"></a>
 		<a title="portuguese blog i found with tons but TONS of gifs, pixels, bgs, etc" href="https://cantinhoencantado.blogs.sapo.pt" target="_blank"><img src="!g/cantinhoencantado.gif" width="90px"></a>
-		<a href="https://" target="_blank"><img src="!g/pomelo-pixel.gif" alt="pomelo's pixel site"></a>
 
 		<h4 id="fun">for fun!</h4>
 		<div class="neo">
