new featured song n album

--- a/website/music/featured.html
+++ b/website/music/featured.html
@@ -65,7 +65,22 @@ iframe2
 -->
 		<details open>
 			<summary>
-				<span class="date">07.apr.24 - ? : satisfied / 陽​の​か​け​ら </span>
+				<span class="date">12.may.24 - ? : 24 / dreamy drive</span>
+			</summary>
+			<table>
+				<td class="t-left">
+					<iframe width="100%" height="315" src="https://www.youtube-nocookie.com/embed/aZ2QoM6tBYY?si=IcKuSeYMilWbAp1g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+					very catchy and fun song and it kinda has that fnaf's beat to it that i love
+				</td>
+				<td class="t-right">
+					<iframe width="100%" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?si=GnTXZuM9uqc5j-el&amp;list=OLAK5uy_kSUQiKoKqyTnHhCyRPV03P78IgKS7cs8A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+					nice and chill korean indie release! had been meaning to listen it for a while! very refreshing
+				</td>
+			</table>
+		</details>
+		<details>
+			<summary>
+				<span class="date">07.apr.24 - 12.may.24 : satisfied / 陽​の​か​け​ら </span>
 			</summary>
 			<table>
 				<td class="t-left">
