--- a/website/home.html
+++ b/website/home.html
@@ -123,17 +123,17 @@ feel free to look around for any help you need :) just don't be THAT person and 
 		<div id="current" class="box">
 			<h2>currently...</h2>
 			<p><span class="hl">playing:</span> <a href="vgs/fallout-1/index.html">fallout</a>, <a href="/vgs/paranormasight">paranormasight</a></p>
-			<p><span class="hl">reading:</span> <i>the guy she was interested in wasn't a guy at all</i> by sumiko arai, <i>chainsaw man</i> by tatsuki
-				fujimoto</p>
-			<p><span class="hl">watching:</span> dungeon meshi, dead end: paranormal park, twin peaks S2</p>
+			<p><span class="hl">reading:</span> <i>the guy she was interested in wasn't a guy at all</i> by sumiko arai, <i>chainsaw man</i> by tatsuki fujimoto</p>
+			<p><span class="hl">watching:</span> dungeon meshi, twin peaks S2, moral orel</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
-			<p><span class="hl">working on:</span> <a href="/projects/learning-js/index.html">learning JS</a>, uni work</p>
+			<p><span class="hl">working on:</span> <a href="/projects/learning-js/index.html">learning JS</a>, finishing uni work</p>
 			<p><span class="hl">coding/writing:</span>microblog, journal and planners blog post, plushies</p>
-			<p class="date">last updated on 17.apr.24</p>
+			<p class="date">last updated on 12.may.24</p>
 		</div>
 
 		<div id="updates" class="box">
 			<h2>updates</h2>
+			<li>12.may.24: new featured song &amp; album in <a href="/music">music</a></li>
 			<li>09.may.24: added may page to <a href="/scrapbook/2024#may">scrapbook</a> + more <a href="collection/cats/index.html">cats</a></li>
 			<li>04.may.24: new journal log: <a href="/journal">end of 1st uni semester</a></li>
 			<li>02.may.24: new listening log: <a href="music/listening-log/2024/spring.html#4">3rd desire [reve]</a></li>
