--- a/website/music/index.html
+++ b/website/music/index.html
@@ -30,8 +30,7 @@
 		</header>
 		<div id="scroll">
 			<marquee behavior="scroll" onmouseover="this.stop()" onmouseout="this.start()">
-				<b>07.apr.24</b> - updated featured section! /
-				<b>24.mar.24</b> - <a href="listening-log/2024/spring.html">spring listening log</a> is here!
+				<b>12.may.24</b> - updated featured section!
 			</marquee>
 		</div>
 
@@ -89,14 +88,14 @@
 		<div id="featured" class="box">
 			<h4>featured song &amp; album</h4>
 			<div class="song">
-				<b>satisfied</b> by kim wooseok
-				<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/vPFvnqpuFl0?si=jiczeKGnlRU9pAKQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-				<p>such a nice song to jam to, i just wish it was a bit longer!</p>
+				<b>24</b> by tripleS
+				<iframe width="100%" height="315" src="https://www.youtube-nocookie.com/embed/aZ2QoM6tBYY?si=IcKuSeYMilWbAp1g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+				<p>very catchy and fun song and it kinda has that fnaf's beat to it that i love</p>
 			</div>
 			<div class="lp">
-				<b>陽​の​か​け​ら </b> by inuha
-				<iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=1054088397/size=large/bgcol=333333/linkcol=4ec5ec/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://eneiongaku.bandcamp.com/album/-">陽のかけら by inuha</a></iframe>
-				<p>a gorgeous and dreamy ep that uses hatsune miku for its vocals and a mix of shoegaze and dreampop / ambient pop for it's instrumentals.</p>
+				<b>dreamy drive</b> by conut
+				<iframe width="100%" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?si=GnTXZuM9uqc5j-el&amp;list=OLAK5uy_kSUQiKoKqyTnHhCyRPV03P78IgKS7cs8A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+				<p>nice and chill korean indie release! had been meaning to listen it for a while! very refreshing</p>
 			</div>
 			<hr>
 			<center><small>past featured music can be found <a href="featured.html">here</a></small></center>
