index mini change!

--- a/website/index.html
+++ b/website/index.html
@@ -13,7 +13,7 @@
 	<title>(o゜▽゜)o☆ doqmeat</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" type="image/x-icon" href="favicon.gif">
-	<link href="!f/index-v3.css" rel="stylesheet" type="text/css" media="all">
+	<link href="!f/index-v4.css" rel="stylesheet" type="text/css" media="all">
 	<link href="fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
 	<link href="!f/snowflakes.css" rel="stylesheet" type="text/css" media="all">
 	<!-- 	webring stuff -->
@@ -89,27 +89,21 @@
 </head>
 
 <body>
-	<div id="top"></div>
-	<div id="bottom"></div>
 
 	<main>
-		<p>hello there! you're about to enter <br> <a style="background:transparent;text-decoration: none;" href="/home"><span id="rainbow">doqmeat.com</span></a></p>
-		<p>this is a personal website made for my own enjoyment.</p>
-		<p>some pages can be <b>very</b> IMG heavy and might require you to reload more than once for everything to load.</p>
+		<p>hello there! you're about to enter my personal website:</p>
+		<p><a style="background:transparent;text-decoration: none;" href="/home"><span id="rainbow">doqmeat.com</span></a></p>
+		<p>site can be <b>very</b> IMG heavy and might require you to reload the page more than once for everything to load.</p>
 		<p class="hide"><b>homepage is compatible with mobile devices but i cannot guarantee that for every page on my site.</b></p>
+		<p><a href="/home">go to homepage!</a> / <a href="mailto:doqmeat@gmail.com">email</a></p>
 	</main>
 
-	<div id="chatbox">
-		<h3>chatbox</h3>
-		<iframe src="https://www3.cbox.ws/box/?boxid=3527348&boxtag=lFAd4a" width="100%" height="100%" allowtransparency="yes" allow="autoplay" frameborder="0" marginheight="0" marginwidth="0" scrolling="auto"></iframe>
-	</div>
-
 	<footer>
-		<p><b>credit:</b> background from PMMM rebellion
-			<img src="!g/pix/1leaf.png">
-			lace borders by <a href="https://sorahana.ciao.jp/">sorahana</a>
-			<img src="!g/pix/1leaf.png">
-			<a href="http://www.mf2fm.com/rv/dhtmlrainbow.php">blinking JS text effect</a> <img src="!g/pix/1leaf.png"> <a href="/notebook/links/fonts.html">fonts</a> used: morningtea, spirit
+		<p><b>credit:</b>
+			body bg from PMMM rebellion /
+			<a href="http://www.mf2fm.com/rv/dhtmlrainbow.php">blinking JS text effect</a>
+			/
+			<a href="/notebook/links/fonts.html">fonts</a> used: momo
 		</p>
 	</footer>
 
