minor fix to button wall
fixed broken link

--- a/website/sites/index.html
+++ b/website/sites/index.html
@@ -38,7 +38,7 @@
 			<a title="nico - love the index page layout and his art style is very neat. love the cat creatures" href="https://spiders.neocities.org" target="_blank"><img src="!g/spiders.gif"></a>
 			<a title="artyom - windows xp layout goes hard" href="https://arutemu64.neocities.org" target="_blank"><img src="!g/arutemu64.gif"></a>
 			<a title="freyde - an AMAZING collection of pages dedicated to various things." href="https://amriel.neocities.org" target="_blank"><img src="!g/amriel.png"></a>
-			<a title="mimi - super nice person and my penpal!" href="https://neet-elite.net/" target="_blank"><img src="!g/neet-elite.png" alt="neet-elite"></a>
+			<a title="mimi - super nice person and my penpal!" href="https://neetelite.neocities.org/" target="_blank"><img src="!g/neet-elite.png" alt="neet-elite"></a>
 			<a title="meek - HATSUNE MIKU!" href="https://mikufan3939.neocities.org" target="_blank"><img src="!g/mikufan3939.png"></a>
 			<a title="bridget - super neat little site!! i love the layout of this one and the webmaster's art is super nice!!!" href="https://bridget.neocities.org" target="_blank"><img src="!g/bridget.gif"></a>
 			<a title="jeith - a very nostalgic site, lots of nintendo stuff! very cozy" href="https://jeith.neocities.org" target="_blank"><img src="!g/jeith.gif"></a>
