--- a/website/home.html
+++ b/website/home.html
@@ -127,8 +127,8 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<p><span class="hl">watching:</span> dungeon meshi, twin peaks S2, moral orel</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
 			<p><span class="hl">working on:</span> <a href="/projects/learning-js/index.html">learning JS</a>, finishing uni work</p>
-			<p><span class="hl">coding/writing:</span>microblog, journal and planners blog post, plushies</p>
-			<p class="date">last updated on 12.may.24</p>
+			<p><span class="hl">coding/writing:</span> journal and planners blog post, plushies</p>
+			<p class="date">last updated on 15.may.24</p>
 		</div>
 
 		<div id="updates" class="box">
