added plushies link

--- a/website/home.html
+++ b/website/home.html
@@ -61,12 +61,12 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<a href="/scrapbook"><img src="!g/pix/scissors6.gif" alt=""> scrapbook</a>
 			<a href="/photobook"><img src="/!g/pix/camera.gif" alt=""> photobook</a>
 			<a href="/shrines"><img src="/!g/pix/heart2.gif" alt=""> shrines</a>
-			<a href="/collection"><img src="/!g/pix/pics.gif" alt=""> collections</a>
+			<a href="/collection"><img src="/!g/pix/pics.gif" alt=""> collections <img src="/!g/pix/new1.gif"></a>
 			<a href="/vgs"><img src="/!g/pix/vgs.gif" alt=""> gaming log</a>
 			<a title="everything about the music i love!" href="/music"><img src="/!g/pix/sorahanamuu1.gif" alt=""> music</a>
 
 			<h3>misc</h3>
-			<a href="/projects"><img src="/!g/pix/sticky.gif" alt=""> web projects <img src="/!g/pix/new1.gif"></a>
+			<a href="/projects"><img src="/!g/pix/sticky.gif" alt=""> web projects</a>
 			<a href="/masaaki-yuasa"><img src="/!g/pix/tv.gif"> masaaki yuasa watchlist</a>
 			<a href="/october-movies"><img src="/!g/pix/gaikotsu2.gif"> october movie log</a>
 			<a href="safe-spot/index.html"><img src="/!g/pix/flowerpink.gif" alt=""> safe spot</a>
@@ -107,8 +107,6 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<div class="padding">
 
 				<h2>status</h2>
-				<b>announcement:</b> <a title="click to read more" href="/journal/2024/04.html#20">i have disabled my neocities profile!</a>
-				<br>
 				<span class="imood">i am feeling...</span> <a href="https://www.imood.com/users/doqmeat"><img src="https://moods.imood.com/display/uname-doqmeat/trans-1/imood.gif" alt="The current mood of doqmeat at www.imood.com" border="0"></a>
 
 				<div id="statuscafe">
@@ -133,6 +131,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="updates" class="box">
 			<h2>updates</h2>
+			<li>18.may.24: <a href="/collection/plushies/index.html">plushies</a> collection page is now live!</li>
 			<li>12.may.24: new featured song &amp; album in <a href="/music">music</a></li>
 			<li>09.may.24: added may page to <a href="/scrapbook/2024#may">scrapbook</a> + more <a href="collection/cats/index.html">cats</a></li>
 			<li>04.may.24: new journal log: <a href="/journal">end of 1st uni semester</a></li>
