--- a/website/sitemap.html
+++ b/website/sitemap.html
@@ -61,6 +61,7 @@
 				<br> ↳ <a href="/collection/mail-stamps" target="_parent">mail stamps</a>
 				<br> ↳ <a href="/collection/stickers" target="_parent">stickers</a>
 				<br> ↳ <a href="/collection/cats" target="_parent">cat pics</a>
+				<br> ↳ <a href="/collection/plushies/index.html" target="_parent">plushies</a> <img src="/!g/pix/new1.gif">
 			</ul>
 			<li><a href="/wip" target="_parent">art</a> <img src="/!g/pix/caution1.gif"></li>
 			<li><a href="/photobook" target="_parent">photobook</a></li>
