--- a/website/notebook/sitely/graphics.html
+++ b/website/notebook/sitely/graphics.html
@@ -300,6 +300,7 @@
 		<img src="/!g/pix/mailwings.gif">
 		<img src="/!g/pix/dvd1.gif">
 		<a href="https://sorahana.ciao.jp/" target="_blank"><img src="/!g/pix/hw10.gif"></a>
+		<img src="/!g/pix/bear.gif">
 
 		<h3 id="tiny">tinnier</h3>
 
