new pic for about's me irl

--- a/website/about/index.html
+++ b/website/about/index.html
@@ -78,6 +78,7 @@
 					<img src="/collection/cats/!g/hessokind.jpg">
 					<img src="/collection/cats/!g/ishelistening.jpg">
 					<img src="!g/me-irl/silly_dog.png">
+					<img src="!g/me-irl/computer-guy.jpg">
 					<img src="!g/me-irl/good-light-skull.jpg">
 					<img src="/!g/gif/darksoulsskel.gif">
 					<img src="!g/me-irl/nyaboom.jpg">
