added plushies to featured page

--- a/website/home.html
+++ b/website/home.html
@@ -269,7 +269,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="featured-page" class="box">
 			<h2>featured page</h2>
-			<a title="web projects... take me there!" href="/projects"><img src="!g/projects.jpg" alt="featured page"></a>
+			<a title="plushies collection... take me there!" href="/collection/plushies/index.html"><img src="!g/plushies.jpg" alt="featured page"></a>
 		</div>
 
 		<div id="widget" class="box">
