--- a/website/collection/plushies/index.html
+++ b/website/collection/plushies/index.html
@@ -92,7 +92,7 @@
 					<h2>enderman</h2>
 					<p>my childhood best friend.</p>
 					<p>i'm pretty sure i've had this plushie since i was in 3rd grade. his eyes were a bit more <span>purple-ish</span> but over the years the color has worn off.</p>
-					<p><b>brand:</b> jinx</p>
+					<p><b>brand:</b> J!NX</p>
 				</div>
 			</div>
 
