updated currently on homepage

--- a/website/home.html
+++ b/website/home.html
@@ -122,11 +122,11 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<h2>currently...</h2>
 			<p><span class="hl">playing:</span> <a href="vgs/fallout-1/index.html">fallout</a>, <a href="/vgs/paranormasight">paranormasight</a></p>
 			<p><span class="hl">reading:</span> <i>the guy she was interested in wasn't a guy at all</i> by sumiko arai, <i>chainsaw man</i> by tatsuki fujimoto</p>
-			<p><span class="hl">watching:</span> dungeon meshi, twin peaks S2, moral orel</p>
+			<p><span class="hl">watching:</span> dungeon meshi, twin peaks S2</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
-			<p><span class="hl">working on:</span> <a href="/projects/learning-js/index.html">learning JS</a>, finishing uni work</p>
-			<p><span class="hl">coding/writing:</span> journal and planners blog post, plushies</p>
-			<p class="date">last updated on 15.may.24</p>
+			<p><span class="hl">working on:</span> <a href="/projects/learning-js/index.html">learning JS</a></p>
+			<p><span class="hl">coding/writing:</span> journal and planners blog post</p>
+			<p class="date">last updated on 18.may.24</p>
 		</div>
 
 		<div id="updates" class="box">
